   * Added [heal_on_hit] for healing/harming the user by a fixed amount
   * Drained HP amounts can now be negative.  Trigger this by setting
	 a negative value in the [drain] or [heal_on_hit] weapon special
   * Negative drain amounts will not take a unit below 1 health
   * Added [show_if] support to [objectives] [note]
   * New tags: [lift_fog] and [reset_fog]
   * Using more than 4 multiply effects no longer wraps to negative integers
   * Added: support for ranges of sides in SSF
   * The [filter_vision] tag of the SUF now uses a SSF
     (viewing_side= still works, but is deprecated and
     should be renamed to side=)
     Semantics for empty side information changes from
     "all enemy sides" to "all sides"
   * [filter_vision] now works in location filters as well as unit filters,
     and has an additional key (respect_fog) for locations
   * Support for [object]unit_type= and [object]unit_gender= has been
     removed, use [object][filter]type= respectively [object][filter]gender=
     instead
 * Miscellaneous and bug fixes:
   * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
     platforms using XDG layout (no compiled-in preferences path override,
     bug #19318)
   * Fixed unit sound animation timings wherever {SOUND:SLOW}, {SOUND:POISON},
     and several macros from animation-utils2.cfg are used (see bug #19274)
   * Restart is no longer required to toggle desktop notifications
   * Display the savegame version when warning the user about unsupported or
     mismatched versions (bug #7243)
   * Implemented feature request for difficulty changing during campaigns.
     (see bug #10978)
   * The saved games cache file is now save_index instead of save_index.gz, and
     it is compressed when the Compressed Saves option is enabled in Advanced
     Preferences (patch #3115)
   * Show base terrain description if none for overlay (bug #19411)
   * Added wesmage tool to test SDL image manipulation functions.