@@ -166,6 +166,7 @@ Version 1.11.0-svn:
    * Negative drain amounts will not take a unit below 1 health
    * Added [show_if] support to [objectives] [note]
    * New tags: [lift_fog] and [reset_fog]
+   * New keys: reset_maps= and reset_view= added to [modify_side].
    * Using more than 4 multiply effects no longer wraps to negative integers
    * Added: support for ranges of sides in SSF
    * The [filter_vision] tag of the SUF now uses a SSF
